<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_horizontal"
        android:padding="18dp"
        android:text="@string/label_sign_up"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_name"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_last_name"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tvMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_mail"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_password"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_action_sign_up" />

</LinearLayout>