<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_horizontal"
        android:padding="18dp"
        android:text="@string/label_sign_up"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_name"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_last_name"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tvMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_mail"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_password"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:hint="@null"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/ivHidden"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_visibility_off_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_birthday"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp">

        <EditText
            android:id="@+id/etDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="DD"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="MM"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="YYYY"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_gender"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/rbgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_male" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/label_female" />

        <RadioButton
            android:id="@+id/rbNotDisclosed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_not_disclose" />
    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <CheckBox
        android:id="@+id/cbTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:text="Acepto términos y condiciones"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:fontFamily="@font/montserrat"
        android:onClick="runValidations"
        android:text="@string/label_action_sign_up" />

</LinearLayout>